--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
     "nuxt": "^2.15.8",
+    "swiper": "^6.5.6",
     "vue": "^2.7.10",
+    "vue-awesome-swiper": "^4.1.1",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10"
   },
