--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.15.8",
     "swiper": "^6.5.6",
     "vue": "^2.7.10",
