--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "vue": "^2.7.10",
     "vue-awesome-swiper": "^4.1.1",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue-qriously": "^1.1.1"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
