--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "@nuxtjs/axios": "^5.13.1",
+    "@nuxtjs/proxy": "^2.1.0",
     "core-js": "^3.25.3",
     "element-ui": "^2.15.10",
     "js-cookie": "^2.2.1",
